src/pages/index/components/Qas/index.less
._local {
      :global {
            .empty_wrap {
                  padding: 120px 0;
            }

            .ReactVirtualized__List {
                  outline: none;
                  overflow: visible !important;

                  .ReactVirtualized__Grid__innerScrollContainer {
                        overflow: visible !important;
                  }
            }

            .loading_more {
                  .loading {
                        color: var(--primary-color);
                  }
            }
      }
}

@keyframes show {
      from {
            transform: scaleY(0);
      }

      to {
            transform: scaleY(1);
      }
}

.qa_item {
      box-shadow: var(--light_box_shadow_card);
      border-radius: var(--radius_normal);
      background-color: white;
      margin-bottom: 16px;
      overflow: hidden;

      &.qa_item_dark {
            background-color: var(--dark_color_block);

            :global {
                  .question {
                        .q_head {
                              border-bottom: 1px solid #2f2f2f;
                        }
                  }
            }
      }

      @media screen and (max-width:420px) {
            box-shadow: none;
      }

      :global {
            .icon_wrap {
                  width: 30px;
                  height: 30px;
                  border-radius: var(--radius_normal);

                  &:hover {
                        background-color: var(--light_bg_hover);
                  }

                  &.disabled {
                        opacity: 0.1;
                  }
            }

            .icon_edit_wrap,
            .icon_toggle_wrap {
                  margin-right: -10px;
            }

            .question {
                  .q_item {
                        padding: 16px 20px;
                  }

                  .q_head {
                        padding: 10px 20px;
                        border-bottom: 1px solid whitesmoke;

                        .left {

                              .pass_times {
                                    width: 40px;
                              }

                              .avarage_rate_value {
                                    width: 40px;
                              }
                        }

                  }

                  .q_foot {
                        padding-top: 0;
                        padding-bottom: 10px;

                  }
            }
      }

      .answer {
            .content {
                  transform-origin: top;
                  animation: show 0.3s ease;
                  padding: 16px 20px;
                  overflow-y: scroll;
                  border-top: 1px solid whitesmoke;

                  &.dark {
                        border-top: 1px solid #2f2f2f;
                  }
            }

            &.dark {
                  :global {
                        .a_foot {
                              background-color: rgba(0, 0, 0, 0.1);
                        }
                  }
            }

            :global {
                  .a_foot {
                        padding: 16px 20px;
                        background-color: whitesmoke;

                        .ant-rate {
                              color: var(--primary-color);
                        }
                  }
            }
      }
}

.markdown {
      color: #24292e;

      &.dark {
            color: white;

            h1,
            h2,
            h3,
            h4,
            h5,
            h6 {
                  color: white;
            }

            h1,
            h2 {
                  padding-bottom: .3em;
                  border-bottom: 1px solid rgba(255, 255, 255, 0.05);
            }

            pre {
                  background-color: #333;
            }

            p {

                  code,
                  tt {
                        background-color: #333;
                  }
            }
      }

      :global {

            h1,
            h2,
            h3,
            h4,
            h5,
            h6 {
                  margin-top: 24px;
                  margin-bottom: 16px;
                  font-weight: 600;
                  line-height: 1.25;
            }

            h1,
            h2 {
                  padding-bottom: .3em;
                  border-bottom: 1px solid #eaecef;
            }

            h1 {
                  font-size: 2em;
            }

            ol,
            ul {
                  padding-left: 2em;
                  margin-top: 10px;
            }

            pre {
                  padding: 16px;
                  overflow: auto;
                  font-size: 85%;
                  line-height: 1.45;
                  background-color: #f6f8fa;
                  border-radius: 3px;
            }

            p {
                  margin-top: 10px;
                  margin-bottom: 16px;
                  line-height: 1.8;

                  code,
                  tt {
                        padding: .2em .4em;
                        background-color: rgba(27, 31, 35, .05);
                        border-radius: 3px;
                  }
            }
      }
}

